jpeg: Assume that CMYK JPEGs are inverted CMYK

Photoshop seems to assume that CMYK JPEGs are in inverted CMYK format.
We now do the same. Hopefully it won't cause problems as most CMYK files
around are probably produced by that program.

https://bugzilla.gnome.org/show_bug.cgi?id=618096